--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+    background-color: #fafafa;
+  }
+  ::-webkit-scrollbar {
+    width: 5px;
+    background-color: #fafafa;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.55);
+    border-radius: 2.5px;
+  }
+  scrollbar {
+    /*  clear useragent default style*/
+    -moz-appearance: none !important;
+  }
+  /* buttons at two ends */
+  scrollbarbutton {
+    -moz-appearance: none !important;
+  }
+  /* the sliding part*/
+  thumb {
+    -moz-appearance: none !important;
+  }
+  scrollcorner {
+    -moz-appearance: none !important;
+    resize: both;
+  }
+  /* vertical or horizontal */
+  scrollbar[orient='vertical'] {
+    color: silver;
+  }
+  body{
+      margin:0px!important;
+  }
+  @media only screen and (max-width: 700px) {
+    .avg{
+        display: none;
+    }
+}
